tests/baselines/reference/restArgAssignmentCompat.errors.txt
==== tests/cases/compiler/restArgAssignmentCompat.ts (1 errors) ====
    function f(...x: number[]) {
        x.forEach((n, i) => void ('item ' + i + ' = ' + n));
    }
    function g(x: number[], y: string) { }
    
    var n = g;
    n = f;
    ~
!!! restArgAssignmentCompat.ts(7,1): error TS2012: Type 'typeof f' is not assignable to type 'typeof g':
!!! 	Call signatures of types 'typeof f' and 'typeof g' are incompatible:
!!! 		Type 'Number' is missing property 'concat' from type 'number[]'.
    n([4], 'foo');
    